Cria tela inicial

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,31 @@
-<ion-app>
-  <ion-router-outlet></ion-router-outlet>
-</ion-app>
+    <div class="home">
+
+      <div class="logo">
+         <h1>Braimprove</h1>
+      </div>
+
+      <div class="content">
+      
+      <ion-button class="btn" style="margin: 20px" color="warning" href="../app/app.component.scss">
+        <ion-icon slot="start" name="star"></ion-icon>
+        MEMÓRIA
+      </ion-button>
+      
+      <ion-button class="btn" style="margin: 20px" color="warning" href="../app/app.component.scss">
+        <ion-icon slot="start" name="star"></ion-icon>
+        RACIOCÍNO
+      </ion-button>
+      
+      <ion-button class="btn" style="margin: 20px" color="warning" href="../app/app.component.scss">
+        <ion-icon slot="start" name="star" ></ion-icon>
+        REFLEXO
+      </ion-button>
+    </div>
+
+    <div class="action">
+      <a href="url" style="margin: 20px" >Como Jogar ?</a>
+      
+      <a href="url" style="margin: 20px" >Convide seus amigos</a>
+    </div>
+  
+  </div>
