adiciona todas as telas

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,21 +1,28 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<div class="home">
 
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+  <div class="logo">
+    <img class="brainimg" src="assets/icon/brain.png">
+    <h1>Braimprove</h1>
   </div>
-</ion-content>
+
+  <div class="content">
+  
+  <ion-button class="btn" style="margin: 20px" color="tertiary">
+      SUDOKU
+  </ion-button>
+
+  <ion-button class="btn" style="margin: 20px" color="tertiary">
+    JOGO DA MEMÓRIA
+  </ion-button>
+  
+  <ion-button class="btn" style="margin: 20px" color="tertiary">
+    TIRO AO ALVO
+  </ion-button>
+</div>
+
+ <div class="action">
+  <a href="url" class="link" style="margin: 20px" >Como Jogar ?</a>
+  
+  <a href="url" class="link"  style="margin: 20px" >Convide seus amigos</a>
+  </div>
+</div>
