--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,45 @@
-#container {
+
+.home{
+  background-color: #e7edea;
+  height: 100%;
+  width: 100%;
+}
+
+.brainimg{
+  width: 80px;
+  height: auto;
+  margin-right: 15px;
+}
+
+.content{
   text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+  display: flex;
+  flex-direction: column;
+  padding: 30px 50px;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+.btn{
+  padding: 5px,90px;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+.logo{
+  padding: 60px 90px;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  color: black;
+  display:flex;
+  flex-direction: row;
 }
 
-#container a {
-  text-decoration: none;
+.action{
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  padding: 30px 50px;
+  margin: 10px;
+}
+
+.link{
+  color: black;
 }
