adiciona botoes de voltar e eventos

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,15 +7,15 @@
 
   <div class="content">
   
-  <ion-button class="btn" style="margin: 20px" color="tertiary">
+  <ion-button class="btn" style="margin: 20px" color="tertiary" openSudoku (click)="openSudoku()">
       SUDOKU
   </ion-button>
 
-  <ion-button class="btn" style="margin: 20px" color="tertiary">
+  <ion-button class="btn" style="margin: 20px" color="tertiary" openMemoria (click)="openMemoria()">
     JOGO DA MEMÓRIA
   </ion-button>
   
-  <ion-button class="btn" style="margin: 20px" color="tertiary">
+  <ion-button class="btn" style="margin: 20px" color="tertiary" openTiroAoAlvo (click)="openTiroAoAlvo()">
     TIRO AO ALVO
   </ion-button>
 </div>
