--- a/src/app/sudoku/sudoku.component.html
+++ b/src/app/sudoku/sudoku.component.html
@@ -16,6 +16,11 @@
     <ion-button class="btn" style="margin: 20px" color="tertiary">
       JOGAR
     </ion-button>
-
   </div>
-</div>1
+  <ion-fab class="back" vertical="bottom" horizontal="start"  slot="fixed" backHome (click)="backHome()">
+    <ion-fab-button color="tertiary">
+      <ion-icon name="arrow-back-circle"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+
+</div>
