--- a/src/app/sudoku/sudoku.component.scss
+++ b/src/app/sudoku/sudoku.component.scss
@@ -30,6 +30,11 @@
        //ver porque o list notes tira a responsividade da dificuldade
   }
 
+  .back{
+    flex-direction: row;
+    padding: 3%;
+}
+
   .content{
     text-align: center;
     display: flex;
