--- a/src/app/reflection/reflection.component.html
+++ b/src/app/reflection/reflection.component.html
@@ -17,5 +17,11 @@
       JOGAR
     </ion-button>
 
+  <ion-fab  class="back" vertical="bottom" horizontal="start" slot="fixed" backHome (click)="backHome()">
+    <ion-fab-button color="tertiary">
+      <ion-icon name="arrow-back-circle"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+
   </div>
 </div>
