faz grande parte do front end

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -18,11 +18,15 @@
   <ion-button class="btn" style="margin: 20px" color="tertiary" openTiroAoAlvo (click)="openTiroAoAlvo()">
     TIRO AO ALVO
   </ion-button>
+
+  <ion-button class="btn" style="margin: 20px" color="tertiary" openSobre (click)="openSobre()">
+    SOBRE
+  </ion-button>
 </div>
 
  <div class="action">
-  <a href="url" class="link" style="margin: 20px" >Como Jogar ?</a>
+  <a class="link" openComoJogar (click)="openComoJogar()" style="margin: 20px" >Como Jogar ?</a>
   
-  <a href="url" class="link"  style="margin: 20px" >Convide seus amigos</a>
+  <a class="link" style="margin: 20px" >Convide seus amigos</a>
   </div>
 </div>
