--- a/src/app/reflection/reflection.component.html
+++ b/src/app/reflection/reflection.component.html
@@ -13,15 +13,15 @@
       <ion-note class="note" color="danger">DÍFICIL</ion-note>
     </div>
 
-    <ion-button class="btn" style="margin: 20px" color="tertiary">
+    <ion-button class="btn" style="margin: 20px" color="tertiary" jogarReflection (click)="jogarReflection()">
       JOGAR
     </ion-button>
 
-  <ion-fab  class="back" vertical="bottom" horizontal="start" slot="fixed" backHome (click)="backHome()">
-    <ion-fab-button color="tertiary">
-      <ion-icon name="arrow-back-circle"></ion-icon>
-    </ion-fab-button>
-  </ion-fab>
+    <ion-fab  class="back" vertical="bottom" horizontal="start" slot="fixed" backHome (click)="backHome()">
+      <ion-fab-button color="tertiary">
+        <ion-icon name="arrow-back-circle"></ion-icon>
+      </ion-fab-button>
+    </ion-fab>
 
   </div>
 </div>
