--- a/src/app/sudoku/sudoku.component.html
+++ b/src/app/sudoku/sudoku.component.html
@@ -13,7 +13,7 @@
       <ion-note class="note" color="danger">DÍFICIL</ion-note>
     </div>
 
-    <ion-button class="btn" style="margin: 20px" color="tertiary">
+    <ion-button class="btn" style="margin: 20px" color="tertiary" jogarSudoku (click)="jogarSudoku()"> 
       JOGAR
     </ion-button>
   </div>
