--- a/src/app/reflection/reflection.component.scss
+++ b/src/app/reflection/reflection.component.scss
@@ -57,3 +57,13 @@
   flex-direction: row;
 }
 
+.selected
+{
+ // box-shadow: rgb(0, 0, 0) 0.1em 0.1em 0.2em;
+  border-radius: 100%;
+  border-style: outset;
+  border-width: 4px;
+  padding: 5px;
+  border: 3px solid gray
+}
+
