adiciona tela do sudoku e algumas logicas

--- a/src/app/games/sudokuGame/sudokuGame.component.html
+++ b/src/app/games/sudokuGame/sudokuGame.component.html
@@ -1,3 +1,140 @@
-<p>
-  sudokuGame works!
-</p>
+<div class="home">
+  <div class="content">
+    <tr class="row">
+      <td id="11" class="cell"><input type="text" maxlength="1" readonly (click)="selection(11)"></td>
+      <td id="12" class="cell"><input type="text" maxlength="1" readonly (click)="selection(12)"></td>
+      <td id="13" class="cellRight"><input type="text" maxlength="1" readonly (click)="selection(13)"></td>
+      <td id="14" class="cell"><input type="text" maxlength="1" readonly (click)="selection(14)"></td>
+      <td id="15" class="cell"><input type="text" maxlength="1" readonly (click)="selection(15)"></td>
+      <td id="16" class="cellRight"><input type="text" maxlength="1" readonly (click)="selection(16)"></td>
+      <td id="17" class="cell"><input type="text" maxlength="1" readonly (click)="selection(17)"></td>
+      <td id="18" class="cell"><input type="text" maxlength="1" readonly (click)="selection(18)"></td>
+      <td id="19" class="cell"><input type="text" maxlength="1" readonly (click)="selection(19)"></td>
+    <tr class="row">
+      <td id="21" class="cell"><input type="text" maxlength="1" readonly (click)="selection(21)"></td>
+      <td id="22" class="cell"><input type="text" maxlength="1" readonly (click)="selection(22)"></td>
+      <td id="23" class="cellRight"><input type="text" maxlength="1" readonly (click)="selection(23)"></td>
+      <td id="24" class="cell"><input type="text" maxlength="1" readonly (click)="selection(24)"></td>
+      <td id="25" class="cell"><input type="text" maxlength="1" readonly (click)="selection(25)"></td>
+      <td id="26" class="cellRight"><input type="text" maxlength="1" readonly (click)="selection(26)"></td>
+      <td id="27" class="cell"><input type="text" maxlength="1" readonly (click)="selection(27)"></td>
+      <td id="28" class="cell"><input type="text" maxlength="1" readonly (click)="selection(28)"></td>
+      <td id="29" class="cell"><input type="text" maxlength="1" readonly (click)="selection(29)"></td>
+    </tr>
+    <tr class="row">
+      <td id="31" class="cell"><input type="text" maxlength="1" readonly (click)="selection(31)"></td>
+      <td id="32" class="cell"><input type="text" maxlength="1" readonly (click)="selection(32)"></td>
+      <td id="33" class="cellRight"><input type="text" maxlength="1" readonly (click)="selection(33)"></td>
+      <td id="34" class="cell"><input type="text" maxlength="1" readonly (click)="selection(34)"></td>
+      <td id="35" class="cell"><input type="text" maxlength="1" readonly (click)="selection(35)"></td>
+      <td id="36" class="cellRight"><input type="text" maxlength="1" readonly (click)="selection(36)"></td>
+      <td id="37" class="cell"><input type="text" maxlength="1" readonly (click)="selection(37)"></td>
+      <td id="38" class="cell"><input type="text" maxlength="1" readonly (click)="selection(38)"></td>
+      <td id="39" class="cell"><input type="text" maxlength="1" readonly (click)="selection(39)"></td>
+    </tr>
+    <tr class="row">
+      <td id="41" class="cellTop"><input type="text" maxlength="1" readonly (click)="selection(41)"></td>
+      <td id="42" class="cellTop"><input type="text" maxlength="1" readonly (click)="selection(42)"></td>
+      <td id="43" class="cellTopRight"><input type="text" maxlength="1" readonly (click)="selection(43)"></td>
+      <td id="44" class="cellTop"><input type="text" maxlength="1" readonly (click)="selection(44)"></td>
+      <td id="45" class="cellTop"><input type="text" maxlength="1" readonly (click)="selection(45)"></td>
+      <td id="46" class="cellTopRight"><input type="text" maxlength="1" readonly (click)="selection(46)"></td>
+      <td id="47" class="cellTop"><input type="text" maxlength="1" readonly (click)="selection(47)"></td>
+      <td id="48" class="cellTop"><input type="text" maxlength="1" readonly (click)="selection(48)"></td>
+      <td id="49" class="cellTop"><input type="text" maxlength="1" readonly (click)="selection(49)"></td>
+    </tr>
+    <tr class="row">
+      <td id="51" class="cell"><input type="text" maxlength="1" readonly (click)="selection(51)"></td>
+      <td id="52" class="cell"><input type="text" maxlength="1" readonly (click)="selection(52)"></td>
+      <td id="53" class="cellRight"><input type="text" maxlength="1" readonly (click)="selection(53)"></td>
+      <td id="54" class="cell"><input type="text" maxlength="1" readonly (click)="selection(54)"></td>
+      <td id="55" class="cell"><input type="text" maxlength="1" readonly (click)="selection(55)"></td>
+      <td id="56" class="cellRight"><input type="text" maxlength="1" readonly (click)="selection(56)"></td>
+      <td id="57" class="cell"><input type="text" maxlength="1" readonly (click)="selection(57)"></td>
+      <td id="58" class="cell"><input type="text" maxlength="1" readonly (click)="selection(58)"></td>
+      <td id="59" class="cell"><input type="text" maxlength="1" readonly (click)="selection(59)"></td>
+    </tr>
+    <tr class="row">
+      <td id="61" class="cell"><input type="text" maxlength="1" readonly (click)="selection(61)"></td>
+      <td id="62" class="cell"><input type="text" maxlength="1" readonly (click)="selection(62)"></td>
+      <td id="63" class="cellRight"><input type="text" maxlength="1" readonly (click)="selection(63)"></td>
+      <td id="64" class="cell"><input type="text" maxlength="1" readonly (click)="selection(64)"></td>
+      <td id="65" class="cell"><input type="text" maxlength="1" readonly (click)="selection(65)"></td>
+      <td id="66" class="cellRight"><input type="text" maxlength="1" readonly (click)="selection(66)"></td>
+      <td id="67" class="cell"><input type="text" maxlength="1" readonly (click)="selection(67)"></td>
+      <td id="68" class="cell"><input type="text" maxlength="1" readonly (click)="selection(68)"></td>
+      <td id="69" class="cell"><input type="text" maxlength="1" readonly (click)="selection(69)"></td>
+    </tr>
+    <tr class="row">
+      <td id="71" class="cellTop"><input type="text" maxlength="1" readonly (click)="selection(71)"></td>
+      <td id="72" class="cellTop"><input type="text" maxlength="1" readonly (click)="selection(72)"></td>
+      <td id="73" class="cellTopRight"><input type="text" maxlength="1" readonly (click)="selection(73)"></td>
+      <td id="74" class="cellTop"><input type="text" maxlength="1" readonly (click)="selection(74)"></td>
+      <td id="75" class="cellTop"><input type="text" maxlength="1" readonly (click)="selection(75)"></td>
+      <td id="76" class="cellTopRight"><input type="text" maxlength="1" readonly (click)="selection(76)"></td>
+      <td id="77" class="cellTop"><input type="text" maxlength="1" readonly (click)="selection(77)"></td>
+      <td id="78" class="cellTop"><input type="text" maxlength="1" readonly (click)="selection(78)"></td>
+      <td id="79" class="cellTop"><input type="text" maxlength="1" readonly (click)="selection(79)"></td>
+    </tr>
+    <tr class="row">
+      <td id="81" class="cell"><input type="text" maxlength="1" readonly (click)="selection(81)"></td>
+      <td id="82" class="cell"><input type="text" maxlength="1" readonly (click)="selection(82)"></td>
+      <td id="83" class="cellRight"><input type="text" maxlength="1" readonly (click)="selection(83)"></td>
+      <td id="84" class="cell"><input type="text" maxlength="1" readonly (click)="selection(84)"></td>
+      <td id="85" class="cell"><input type="text" maxlength="1" readonly (click)="selection(85)"></td>
+      <td id="86" class="cellRight"><input type="text" maxlength="1" readonly (click)="selection(86)"></td>
+      <td id="87" class="cell"><input type="text" maxlength="1" readonly (click)="selection(87)"></td>
+      <td id="88" class="cell"><input type="text" maxlength="1" readonly (click)="selection(88)"></td>
+      <td id="89" class="cell"><input type="text" maxlength="1" readonly (click)="selection(89)"></td>
+    </tr>
+    <tr class="row">
+      <td id="91" class="cell"><input type="text" maxlength="1" readonly (click)="selection(91)"></td>
+      <td id="92" class="cell"><input type="text" maxlength="1" readonly (click)="selection(92)"></td>
+      <td id="93" class="cellRight"><input type="text" maxlength="1" readonly (click)="selection(93)"></td>
+      <td id="94" class="cell"><input type="text" maxlength="1" readonly (click)="selection(94)"></td>
+      <td id="95" class="cell"><input type="text" maxlength="1" readonly (click)="selection(95)"></td>
+      <td id="96" class="cellRight"><input type="text" maxlength="1" readonly (click)="selection(96)"></td>
+      <td id="97" class="cell"><input type="text" maxlength="1" readonly (click)="selection(97)"></td>
+      <td id="98" class="cell"><input type="text" maxlength="1" readonly (click)="selection(98)"></td>
+      <td id="99" class="cell"><input type="text" maxlength="1" readonly (click)="selection(99)"></td>
+    </tr>
+    <div class="numbers">
+      <tr class="row">
+        <td class="cellNumbers"><input type="text" value="1" maxlength="1" readonly (click)="selection1()">
+          <span [ngClass]="{'selected':Selected === 1}"></span>
+        </td>
+        <td class="cellNumbers"><input type="text" value="2" maxlength="1" readonly (click)="selection2()">
+          <span [ngClass]="{'selected':Selected === 2}"></span>
+        </td>
+        <td class="cellNumbers"><input type="text" value="3" maxlength="1" readonly (click)="selection3()">
+          <span [ngClass]="{'selected':Selected === 3}"></span>
+        </td>
+        <td class="cellNumbers"><input type="text" value="4" maxlength="1" readonly (click)="selection4()">
+          <span [ngClass]="{'selected':Selected === 4}"></span>
+        </td>
+        <td class="cellNumbers"><input type="text" value="5" maxlength="1" readonly (click)="selection5()">
+          <span [ngClass]="{'selected':Selected === 5}"></span>
+        </td>
+        <td class="cellNumbers"><input type="text" value="6" maxlength="1" readonly (click)="selection6()">
+          <span [ngClass]="{'selected':Selected === 6}"></span>
+        </td>
+        <td class="cellNumbers"><input type="text" value="7" maxlength="1" readonly (click)="selection7()">
+          <span [ngClass]="{'selected':Selected === 7}"></span>
+        </td>
+        <td class="cellNumbers"><input type="text" value="8" maxlength="1" readonly (click)="selection8()">
+          <span [ngClass]="{'selected':Selected === 8}"></span>
+        </td>
+        <td class="cellNumbers"><input type="text" value="9" maxlength="1" readonly (click)="selection9()">
+          <span [ngClass]="{'selected':Selected === 9}"></span>
+        </td>
+      </tr>
+    </div>
+
+    <ion-fab class="back" vertical="bottom" horizontal="start" slot="fixed" backHome (click)="backHome()">
+      <ion-fab-button color="tertiary">
+        <ion-icon name="home-outline"></ion-icon>
+      </ion-fab-button>
+    </ion-fab>
+  </div>
+
+</div>
