api forza inicio

--- a/src/app/games/memoriaGame/memoriaGame.component.html
+++ b/src/app/games/memoriaGame/memoriaGame.component.html
@@ -1,3 +1,18 @@
-<p>
-  memoriaGame works!
-</p>
+<img id="imagem1" width="200px" height="200"/>
+<img id="imagem2" width="200px" height="200"/>
+<img id="imagem3" width="200px" height="200"/>
+<img id="imagem4" width="200px" height="200"/>
+<img id="imagem5" width="200px" height="200"/>
+<img id="imagem6" width="200px" height="200"/>
+<img id="imagem7" width="200px" height="200"/>
+<img id="imagem8" width="200px" height="200"/>
+<img id="imagem9" width="200px" height="200"/>
+<img id="imagem10" width="200px" height="200"/>
+<img id="imagem11" width="200px" height="200"/>
+<img id="imagem12" width="200px" height="200"/>
+<img id="imagem13" width="200px" height="200"/>
+<img id="imagem14" width="200px" height="200"/>
+<img id="imagem15" width="200px" height="200"/>
+<img id="imagem16" width="200px" height="200"/>
+<button onclick="loadImage(8 , 1, '')" id="btnStart">Começar</button>
+<p id="imagens"></p>
