Adiciona API do whats

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -26,7 +26,7 @@
 
  <div class="action">
   <a class="link" openComoJogar (click)="openComoJogar()" style="margin: 20px" >Como Jogar ?</a>
-  
-  <a class="link" style="margin: 20px" >Convide seus amigos</a>
+
+  <a class="link" (click)="open()"  id="whatsapp-share-btt" rel="nofollow" style="margin: 20px" >Convide seus amigos</a>
   </div>
 </div>
