--- a/src/app/games/memoriaGame/memoriaGame.component.html
+++ b/src/app/games/memoriaGame/memoriaGame.component.html
@@ -1,18 +1,83 @@
-<img id="imagem1" width="200px" height="200"/>
-<img id="imagem2" width="200px" height="200"/>
-<img id="imagem3" width="200px" height="200"/>
-<img id="imagem4" width="200px" height="200"/>
-<img id="imagem5" width="200px" height="200"/>
-<img id="imagem6" width="200px" height="200"/>
-<img id="imagem7" width="200px" height="200"/>
-<img id="imagem8" width="200px" height="200"/>
-<img id="imagem9" width="200px" height="200"/>
-<img id="imagem10" width="200px" height="200"/>
-<img id="imagem11" width="200px" height="200"/>
-<img id="imagem12" width="200px" height="200"/>
-<img id="imagem13" width="200px" height="200"/>
-<img id="imagem14" width="200px" height="200"/>
-<img id="imagem15" width="200px" height="200"/>
-<img id="imagem16" width="200px" height="200"/>
+<link rel="stylesheet" href="./memoriaGame.component.css">
 <button onclick="loadImage(8 , 1, '')" id="btnStart">Começar</button>
-<p id="imagens"></p>
+<section class="memory-game">
+    <div class="memory-card" id="memory-game1" onclick="flipCard(this)" data-framework="imagem1">
+        <img class="front-face" id="imagem1" alt="imagem1">
+        <img class="back-face" src="assets/icon/yugioh.jpg" alt="Memory Card">
+    </div>
+
+    <div class="memory-card" id="memory-game2" onclick="flipCard(this)" data-framework="imagem2">
+        <img class="front-face" id="imagem2" alt="imagem2">
+        <img class="back-face" src="assets/icon/yugioh.jpg" alt="Memory Card">
+    </div>
+
+    <div class="memory-card" id="memory-game3" onclick="flipCard(this)" data-framework="imagem3">
+        <img class="front-face" id="imagem3" alt="imagem3">
+        <img class="back-face" src="assets/icon/yugioh.jpg" alt="Memory Card">
+    </div>
+
+    <div class="memory-card" id="memory-game4" onclick="flipCard(this)" data-framework="imagem4">
+        <img class="front-face" id="imagem4" alt="imagem4">
+        <img class="back-face" src="assets/icon/yugioh.jpg" alt="Memory Card">
+    </div>
+
+    <div class="memory-card" id="memory-game5" onclick="flipCard(this)" data-framework="imagem5">
+        <img class="front-face" id="imagem5" alt="imagem5">
+        <img class="back-face" src="assets/icon/yugioh.jpg" alt="Memory Card">
+    </div>
+
+    <div class="memory-card" id="memory-game6" onclick="flipCard(this)" data-framework="imagem6">
+        <img class="front-face" id="imagem6" alt="imagem6">
+        <img class="back-face" src="assets/icon/yugioh.jpg" alt="Memory Card">
+    </div>
+
+    <div class="memory-card" id="memory-game7" onclick="flipCard(this)" data-framework="imagem7">
+        <img class="front-face" id="imagem7" alt="imagem7">
+        <img class="back-face" src="assets/icon/yugioh.jpg" alt="Memory Card">
+    </div>
+
+    <div class="memory-card" id="memory-game8" onclick="flipCard(this)" data-framework="imagem8">
+        <img class="front-face" id="imagem8" alt="imagem8">
+        <img class="back-face" src="assets/icon/yugioh.jpg" alt="Memory Card">
+    </div>
+
+    <div class="memory-card" id="memory-game9" onclick="flipCard(this)" data-framework="imagem1">
+        <img class="front-face" id="imagem9" alt="imagem1">
+        <img class="back-face" src="assets/icon/yugioh.jpg" alt="Memory Card">
+    </div>
+
+    <div class="memory-card" id="memory-game10" onclick="flipCard(this)" data-framework="imagem2">
+        <img class="front-face" id="imagem10" alt="imagem2">
+        <img class="back-face" src="assets/icon/yugioh.jpg" alt="Memory Card">
+    </div>
+
+    <div class="memory-card" id="memory-game11" onclick="flipCard(this)" data-framework="imagem3">
+        <img class="front-face" id="imagem11" alt="imagem3">
+        <img class="back-face" src="assets/icon/yugioh.jpg" alt="Memory Card">
+    </div>
+
+    <div class="memory-card" id="memory-game12" onclick="flipCard(this)" data-framework="imagem4">
+        <img class="front-face" id="imagem12" alt="imagem4">
+        <img class="back-face" src="assets/icon/yugioh.jpg" alt="Memory Card">
+    </div>
+
+    <div class="memory-card" id="memory-game13" onclick="flipCard(this)" data-framework="imagem5">
+        <img class="front-face" id="imagem13" alt="imagem5">
+        <img class="back-face" src="assets/icon/yugioh.jpg" alt="Memory Card">
+    </div>
+
+    <div class="memory-card" id="memory-game14" onclick="flipCard(this)" data-framework="imagem6">
+        <img class="front-face" id="imagem14" alt="imagem6">
+        <img class="back-face" src="assets/icon/yugioh.jpg" alt="Memory Card">
+    </div>
+
+    <div class="memory-card" id="memory-game15" onclick="flipCard(this)" data-framework="imagem7">
+        <img class="front-face" id="imagem15" alt="imagem7">
+        <img class="back-face" src="assets/icon/yugioh.jpg" alt="Memory Card">
+    </div>
+
+    <div class="memory-card" id="memory-game16" onclick="flipCard(this)" data-framework="imagem8">
+        <img class="front-face" id="imagem16" alt="imagem8">
+        <img class="back-face" src="assets/icon/yugioh.jpg" alt="Memory Card">
+    </div>
+</section>
