--- a/src/app/games/memoriaGame/memoriaGame.component.css
+++ b/src/app/games/memoriaGame/memoriaGame.component.css
@@ -1,8 +1,32 @@
+
+.home{
+    background-color: #e7edea;
+    height: 100%;
+    width: 100%;
+  }
+
+  .init{
+    padding: 0px 110px;
+  }
+
+  .game{
+    padding: 100px 0px;
+  }
+
+  .load{
+    height: 150px;
+  }
+
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
+
+.back{
+      flex-direction: row;
+      padding: 3%;
+  }
 
 body {
     height: 100vh;
@@ -24,7 +48,6 @@ body {
     height: calc(33.333% - 10px);
     margin: 5px;
     position: relative;
-    box-shadow: 1px 1px 1px rgba(0, 0, 0, .3);
     transform: scale(1);
     transform-style: preserve-3d;
     transition: transform .5s;
@@ -46,7 +69,7 @@ body {
     padding: 20px;
     position: absolute;
     border-radius: 5px;
-    background: #000000;
+    background: transparent;
     backface-visibility: hidden;
 }
 
