--- a/src/app/games/sudokuGame/sudokuGame.component.html
+++ b/src/app/games/sudokuGame/sudokuGame.component.html
@@ -1,5 +1,5 @@
 <div class="home">
-  <button onclick="carregarSudoku()">começar</button>
+  <button onclick="carregarSudoku('easy')">começar</button>
   <div class="content">
     <tr class="row">
       <td id="00" class="cell"><input type="text" maxlength="1" readonly (click)="selection('00')"></td>
