--- a/src/app/memoria/memoria.component.html
+++ b/src/app/memoria/memoria.component.html
@@ -1,4 +1,9 @@
 <div class="home" >
+  <div class="persona">
+    <img class="brainimg" src="assets/icon/brain.png">
+    <h1>tesste</h1>
+  </div>
+
   <div class="logo">
     <img class="brainimg" src="assets/icon/brain.png">
     <h1>Jogo da Memória</h1>
