--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,5 +1,8 @@
 <div class="home">
-
+  <div class="persona">
+    <img class="brainimg" src="assets/icon/brain.png">
+    <h1>tesste</h1>
+  </div>
   <div class="logo">
     <img class="brainimg" src="assets/icon/brain.png">
     <h1>Braimprove</h1>
@@ -12,10 +15,6 @@
 
     <ion-button class="btn" style="margin: 20px" color="tertiary" openMemoria (click)="openMemoria()">
       JOGO DA MEMÓRIA
-    </ion-button>
-
-    <ion-button class="btn" style="margin: 20px" color="tertiary" openTiroAoAlvo (click)="openTiroAoAlvo()">
-      TIRO AO ALVO
     </ion-button>
 
     <ion-button class="btn" style="margin: 20px" color="tertiary" openSobre (click)="openSobre()">
