--- a/src/app/memoria/memoria.component.scss
+++ b/src/app/memoria/memoria.component.scss
@@ -48,7 +48,17 @@
   }
   
   .logo{
-    padding: 40px 50px;
+    padding: 20px 50px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    color: black;
+    display:flex;
+    flex-direction: row;
+  }
+
+  .persona{
+    padding: 10px 50px;
     text-align: center;
     justify-content: center;
     align-items: center;
