--- a/src/app/sudoku/sudoku.component.scss
+++ b/src/app/sudoku/sudoku.component.scss
@@ -48,7 +48,7 @@
   }
   
   .logo{
-    padding: 40px 50px;
+    padding: 20px 50px;
     text-align: center;
     justify-content: center;
     align-items: center;
@@ -56,6 +56,17 @@
     display:flex;
     flex-direction: row;
   }
+
+  .persona{
+    padding: 10px 50px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    color: black;
+    display:flex;
+    flex-direction: row;
+  }
+
 
   .selected
   {
