--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,48 +1,57 @@
-
-.home{
+.home {
   background-color: #e7edea;
   height: 100%;
   width: 100%;
 }
 
-.brainimg{
+.brainimg {
   width: 80px;
   height: auto;
   margin-right: 15px;
 }
 
-.content{
+.amimalft {
+  width: 60px;
+  height: auto;
+  margin-right: 20px;
+}
+
+.fact {
+  font-size: 20px;
+}
+
+.content {
   text-align: center;
   display: flex;
   flex-direction: column;
   padding: 30px 50px;
 }
 
-.btn{
-  padding: 5px,90px;
+.btn {
+  padding: 5px, 90px;
 }
 
-.logo{
+.logo {
   padding: 20px 90px;
   text-align: center;
   justify-content: center;
   align-items: center;
   color: black;
-  display:flex;
+  display: flex;
   flex-direction: row;
 }
 
-.persona{
+.persona {
   padding: 10px 90px;
   text-align: center;
   justify-content: center;
   align-items: center;
   color: black;
-  display:flex;
+  display: flex;
   flex-direction: row;
 }
 
-.action{
+.action {
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -50,13 +59,13 @@
   margin: 10px;
 }
 
-.link{
+.link {
   color: black;
-  text-decoration: underline black; 
+  text-decoration: underline black;
 }
 
 .whatsapp-share-button {
-  display: inline-block;            
+  display: inline-block;
   width: 40px;
   height: 40px;
   margin: 5px;
